--- a/Validation/README.adoc
+++ b/Validation/README.adoc
@@ -278,11 +278,11 @@ This defines the overall approach, then you can drill down to individual tiers.
 |
 
 | **Date Approved**
-|
+| 25 October, 2025
 | _______________
 
 | **PGP Fingerprint**
-| [Your GPG key fingerprint]
+| 497CF5C0D295A7E8065C5D9A9CD3FBE66B5E2AE4
 |
 
 |===
