--- a/Validation/SHARED/METRICS_TRACKING.adoc
+++ b/Validation/SHARED/METRICS_TRACKING.adoc
@@ -67,7 +67,7 @@ Weekly update cycle. All metrics reviewed for trends.
 |
 
 | **Date Approved**
-|
+| 25 October, 2025
 | _______________
 
 | **PGP Fingerprint**
