--- a/Validation/TIER_I_FOUNDATION/ARCHITECTURE_OVERVIEW.adoc
+++ b/Validation/TIER_I_FOUNDATION/ARCHITECTURE_OVERVIEW.adoc
@@ -368,7 +368,7 @@ Some modules have additional dependencies:
 |
 
 | **Date Approved**
-|
+| 25 October, 2025|
 | _______________
 
 | **PGP Fingerprint**
