--- a/Validation/TIER_III_FORMAL/TIER_III_OVERVIEW.adoc
+++ b/Validation/TIER_III_FORMAL/TIER_III_OVERVIEW.adoc
@@ -27,11 +27,11 @@ LAYER_3_FORMAL_ASSURANCE_STUBS.adoc - Detailed framework for Phase 3 work
 |
 
 | **Date Approved**
-|
+| 25 October, 2025
 | _______________
 
 | **PGP Fingerprint**
-| [Your GPG key fingerprint]
+| 497CF5C0D295A7E8065C5D9A9CD3FBE66B5E2AE4
 |
 
 |===
