--- a/Validation/TIER_II_QUALITY/ACL_CACHING_STRATEGY.adoc
+++ b/Validation/TIER_II_QUALITY/ACL_CACHING_STRATEGY.adoc
@@ -194,8 +194,7 @@ No cache bypass vulnerabilities: ✓ YES / ✗ NO
 |
 
 | **Date Approved**
-|
-| _______________
+| 25 oCTOBER, 2025| _______________
 
 |===
 
