--- a/Validation/TIER_II_QUALITY/ACL_INTEGRATION_POINTS.adoc
+++ b/Validation/TIER_II_QUALITY/ACL_INTEGRATION_POINTS.adoc
@@ -235,8 +235,7 @@ No architectural barriers: ✓ YES / ✗ NO
 |
 
 | **Date Approved**
-|
-| _______________
+| 25 oCTOBER, 2025| _______________
 
 |===
 
