--- a/Validation/TIER_II_QUALITY/DETERMINISM_SPECIFICATION.adoc
+++ b/Validation/TIER_II_QUALITY/DETERMINISM_SPECIFICATION.adoc
@@ -119,8 +119,7 @@ Deterministic execution guarantee verified: ✓ YES / ✗ NO
 |
 
 | **Date Approved**
-|
-| _______________
+| 25 oCTOBER, 2025| _______________
 
 |===
 
