--- a/Validation/TIER_II_QUALITY/MEMORY_SAFETY_SPECIFICATION.adoc
+++ b/Validation/TIER_II_QUALITY/MEMORY_SAFETY_SPECIFICATION.adoc
@@ -135,8 +135,7 @@ All memory safety requirements met: ✓ YES / ✗ NO
 |
 
 | **Date Approved**
-|
-| _______________
+| 25 oCTOBER, 2025| _______________
 
 |===
 
