--- a/Validation/TIER_I_FOUNDATION/PROTOCOLS/PROTOCOL_REQUIREMENTS_TRACEABILITY.adoc
+++ b/Validation/TIER_I_FOUNDATION/PROTOCOLS/PROTOCOL_REQUIREMENTS_TRACEABILITY.adoc
@@ -131,8 +131,7 @@ Document Metadata:
 |
 
 | **Date Approved**
-|
-| _______________
+| 25 oCTOBER, 2025| _______________
 
 | **PGP Fingerprint**
 | 497CF5C0D295A7E8065C5D9A9CD3FBE66B5E2AE4
